data/all_generated_tests/raw_wast_tests/return_UnreachableCodeExecution_2672.wast
;; Sure, here are the unique differential test descriptions focusing on unreachable code execution based on the difference in the code implementations for the return instruction in WebAssembly and wizard_engine:  **Test 1**: Create a function that returns a value, followed by an `unreachable` instruction right after the `return`. The function should only ever return, making any reach to `unreachable` an erroneous behavior. *Constraint Checking*: Ensures that the control flow correctly terminates at `return` and does not proceed to the `unreachable`.

(assert_invalid
  (module
    (func $return_then_unreachable (result i32)
      (return (i32.const 0))
      unreachable
    )
  )
  "unreachable code"
)